Correct h3 letter spacing on property page

--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -261,6 +261,7 @@ main{
 		span{
 			@include astoria-light;
 			text-transform:none;
+			letter-spacing:.1rem;
 		}
 	}
 
